# fraczal

./: Cargo.toml  README.md
assets/palettes/: Batlow.json  BluGrn.json  BluYl.json  Blue-Yellow.json  Blues 2.json  Blues 3.json  Blues.json  BrwnYl.json  BuGn.json  BuPu.json  Burg.json  BurgYl.json  Dark Mint.json  Emrld.json  GnBu.json  Grays.json  Green-Yellow.json  Greens 2.json  Greens 3.json  Greens.json  Hawaii.json  Heat 2.json  Heat.json  Inferno.json  Lajolla.json  Light Grays.json  Magenta.json  Mako.json  Mint.json  OrRd.json  OrYel.json  Oranges.json  Oslo.json  Peach.json  PinkYl.json  Plasma.json  PuBu.json  PuBuGn.json  PuRd.json  Purp.json  (+30 more)
src/: main.rs
src/color/: mod.rs  palettes.rs
src/tests/: float.rs
