[package]
name = "fraczal"
version = "0.1.0"
authors = [ "OK Ryoko <ryoko@kyomu.jp.net>" ]
edition = "2021"
rust-version = "1.63"
description = "Generate colorful images of the Mandelbrot set at the command line"
repository = "https://github.com/ok-ryoko/fraczal"
license = "MIT"
keywords = [ "fractals" ]
categories = [ "command-line-utilities", "rendering" ]
publish = false

[dependencies]
anyhow = "1.0"
float-cmp = "0.9"
image = "0.24"
num = "0.4"
rayon = "1.5"
serde_json = "1.0"

[dependencies.clap]
version = "4.0"
features = [ "cargo", "derive" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.time]
version = "0.3"
features = [ "formatting" ]

[dev-dependencies]
rust_decimal = "1.26"
